--- a/app/src/main/res/layout/activity_select_language.xml
+++ b/app/src/main/res/layout/activity_select_language.xml
@@ -32,32 +32,32 @@
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="592dp"
-        android:layout_height="147dp"
-        android:layout_marginBottom="120dp"
+        android:layout_width="445dp"
+        android:layout_height="179dp"
+        android:layout_marginBottom="176dp"
         android:text="Gujarati"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="592dp"
-        android:layout_height="147dp"
-        android:layout_marginBottom="144dp"
+        android:layout_width="316dp"
+        android:layout_height="173dp"
+        android:layout_marginBottom="96dp"
         android:text="Hindi"
         android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/button3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="592dp"
-        android:layout_height="147dp"
+        android:layout_width="461dp"
+        android:layout_height="133dp"
         android:layout_marginBottom="128dp"
         android:text="Bengali"
         android:textSize="60sp"
@@ -68,8 +68,8 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="592dp"
-        android:layout_height="147dp"
+        android:layout_width="452dp"
+        android:layout_height="189dp"
         android:layout_marginBottom="160dp"
         android:text="Marathi"
         android:textSize="60sp"
@@ -80,8 +80,8 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="1005dp"
-        android:layout_height="252dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Select Language"
         android:textSize="130sp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
