--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -1,73 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical"
     tools:context=".Image">
-    <LinearLayout
-        android:layout_width="match_parent"
+
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:text="Hello World!"
+        android:id="@+id/request_permission_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/request_permission_button"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            app:icon="@drawable/baseline_add_a_photo_24"
-            android:text="Take Image"
-            android:layout_marginEnd="5dp"
-            android:layout_height="match_parent"/>
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/recognizeTextbtn"
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            app:icon="@drawable/baseline_document_scanner_24"
-            android:text="Recognize Text"
-            android:layout_marginStart="5dp"
-            android:layout_height="match_parent"/>
-
-
-    </LinearLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageIv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/baseline_image_24"
-        app:strokeWidth="2dp" />
-
-    <TextView
-        style="@style/TextAppearance.MaterialComponents.Headline6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Recognize Text:"/>
-
-    <EditText
-        android:id="@+id/recognizedTextEt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="your answer"
-        android:minHeight="48dp"
-        android:textSize="12dp"
-        tools:ignore="TextSizeCheck" />
-
-
-</LinearLayout>
-
-</ScrollView>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
