--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="blue_200">#68BBFE</color>
     <color name="grey">#C1C1C1</color>
     <color name="grey_100">#D9D9D9</color>
+    <color name="yellow">#FFFF00</color>
+
 </resources>
