--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="grey">#C1C1C1</color>
     <color name="grey_100">#D9D9D9</color>
     <color name="yellow">#FFFF00</color>
+    <color name="black_shade_1">#FF000000</color>
+
 
 </resources>
