--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,19 +13,19 @@
         android:layout_height="720dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="44dp"
         android:background="@drawable/rectangle_8"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/image_221"
-        android:layout_width="279dp"
-        android:layout_height="225dp"
+        android:layout_width="246dp"
+        android:layout_height="206dp"
 
         android:layout_alignParentTop="true"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/business_agreement"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="32dp"
-        android:layout_marginBottom="76dp"
+        android:layout_marginBottom="72dp"
         android:background="@drawable/rectangle15"
         android:elevation="4dp"
         android:text="History"
@@ -54,7 +54,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="30dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginBottom="112dp"
         android:background="@drawable/rectangle15"
         android:elevation="4dp"
 
@@ -71,7 +71,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="32dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginBottom="192dp"
         android:background="@drawable/rectangle15"
         android:elevation="4dp"
         android:text="Scan"
@@ -94,6 +94,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_221" />
+
+    <View
+        android:id="@+id/rectangle_223"
+        android:layout_width="46dp"
+        android:layout_height="4dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/rectangle_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
