--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".camera">
-
-    <!-- add ImageView to display the captured image -->
     <Button
         android:id="@+id/camera_button"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginStart="150dp"
         android:text="Camera" />
+
+    <!-- add ImageView to display the captured image -->
+
+    <Button
+        android:id="@+id/Upload"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_alignBottom="@+id/click_image"
+        android:layout_marginStart="150dp"
+        android:layout_marginBottom="-138dp"
+        android:text="upload" />
 
     <ImageView
         android:id="@+id/click_image"
@@ -22,5 +30,5 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="70dp"
         android:layout_marginBottom="10dp" />
+
 </RelativeLayout>
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
